Layout desktop + mobile

--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parrot Card Game</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Parrot Card Game</title>
+
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="estilos/reset.css" class="rel">
+        <link rel="stylesheet" href="estilos/estilos.css" class="rel">
+    </head>
+
+    <body>
+        <div class="titulo">PARROT CARD GAME</div>
+        <div class="conteudo">
+            <ul>
+            <li><img src="imagens/front.png"></li>
+            <li><img src="imagens/front.png"></li>
+            <li><img src="imagens/front.png"></li>
+            <li><img src="imagens/front.png"></li>   
+            <li><img src="imagens/front.png"></li>
+            <li><img src="imagens/front.png"></li>
+            </ul>
+            <ul>
+            <li><img src="imagens/front.png"></li> 
+            <li><img src="imagens/front.png"></li>
+            <li><img src="imagens/front.png"></li> 
+            <li><img src="imagens/front.png"></li>
+            <li><img src="imagens/front.png"></li> 
+            <li><img src="imagens/front.png"></li>                       
+            </ul>
+         </div>
+
+        
+    </body>
+    <script src="scripts.js"></script>
+
 </html>
