--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="estilos/estilos.css" class="rel">
     </head>
 
-    <body>
+    <body id= "">
         <div class="cronometro">0s</div> 
         <div class="titulo">PARROT CARD GAME</div>          
         
